social icons display correctly hero and footer on mobile and desktop

--- a/frontend/src/components/SocialIcons/SocialIcons.css
+++ b/frontend/src/components/SocialIcons/SocialIcons.css
@@ -17,7 +17,7 @@
 }
 
 .SocialIcons_row{
-    width: 20vw;
+    width: 250px;
 }
 
 .SocialIcons_col-bg{
@@ -29,23 +29,4 @@
 
 .SocialIcons_col-bg:hover{
     background-image: url("./social-icon-bg-dark.png");
-}
-
-/*    ======   MOBILE RESPONSIVE    ======    */
-@media (max-width: 1200px) {
-    .SocialIcons_row{
-        /*width: 100vw;*/
-    }
-}
-
-@media (max-width: 800px) {
-    .SocialIcons_row{
-        /*width: 150vw;*/
-    }
-
-    .SocialIcons_col-bg{
-        /*width:20vw !important;*/
-    }
-
-
 }
